<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_color"
    android:orientation="vertical" >
  <ScrollView 
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="none"
      >
  <LinearLayout 
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:gravity="center_horizontal"
       >
       <ImageView 
           android:id="@+id/iv_app_logo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@drawable/login_logo_bg"
           
           />
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/app_name"
           android:textColor="#000"
           android:textSize="@dimen/sp_33"
           />
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="我的校园微生活"
           android:textColor="#999999"
           android:textSize="@dimen/sp_13"
           />
       <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:layout_marginTop="@dimen/space_10"
           >
           <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="版本："
           android:textColor="#000"
           android:textSize="@dimen/sp_13"
           />
          <TextView 
           android:id="@+id/tv_about_app_version"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="#000"
           android:textSize="@dimen/sp_13"
           />
       </LinearLayout>
   </LinearLayout>
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:paddingLeft="@dimen/space_13"
       android:paddingRight="@dimen/space_13"
       android:background="@color/white"
       android:layout_marginTop="@dimen/space_28"
       >
       <LinearLayout 
           android:id="@+id/liner_check_version"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="@dimen/space_15"
           android:paddingBottom="@dimen/space_15"
           >
          <TextView 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/str_check_for_updates"
              android:textColor="#333333"
              android:textSize="@dimen/sp_17"
              />
           <TextView 
              android:id="@+id/tv_about_check_version"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="right"
              android:textColor="#999999"
               android:textSize="@dimen/sp_13"
              />
       </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/title_line" />
       <TextView 
           android:id="@+id/tv_about_product_introduction"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="@dimen/space_15"
           android:paddingBottom="@dimen/space_15"
           android:text="@string/str_product_description"
           android:textColor="#333333"
           android:textSize="@dimen/sp_17"  
          />
       <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/title_line" />
       <TextView 
           android:id="@+id/tv_about_normal_problems"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="@dimen/space_15"
           android:paddingBottom="@dimen/space_15"
           android:text="@string/str_common_problem"
           android:textColor="#333333"
           android:textSize="@dimen/sp_17"  
          />
       <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/title_line" />
       <TextView 
           android:id="@+id/tv_about_call_us"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="@dimen/space_15"
           android:paddingBottom="@dimen/space_15"
           android:text="@string/str_contact_us"
           android:textColor="#333333"
           android:textSize="@dimen/sp_17"  
          />
      
   </LinearLayout>
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:gravity="center_horizontal"
       >
   <TextView 
       android:id="@+id/tv_about_app_arguement"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"

       android:textSize="@dimen/sp_13"
       android:textColor="@color/GREENlIGHT"
       />
   <TextView
       android:id="@+id/tv_temp_about"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:textSize="@dimen/sp_13"
       android:textColor="#999999"
       />
   <TextView 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:text="@string/str_about_copyright"
       android:textSize="@dimen/sp_13"
       android:textColor="#999999"
       />
   </LinearLayout>
   </LinearLayout>
   </ScrollView>
</LinearLayout>