<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/col_account_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="217dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/login_logo_bg" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_20"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="@dimen/space_24"
            android:text="@string/str_login_title_text"
            android:textColor="#666666"
            android:textSize="13sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/liner_accont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_33"
            android:layout_marginRight="@dimen/space_33"
            android:background="@drawable/login_input_normal_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_login_input_phone" />

            <EditText
                android:id="@+id/tv_login_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/str_login_phone_no"
                android:inputType="phone"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_33"
            android:layout_marginRight="@dimen/space_33"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_input_normal_bg"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_login_pwd_input" />

            <EditText
                android:id="@+id/tv_login_pwd"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/str_login_pwd"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:password="true"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:textSize="19sp" />
            
			<ImageView 
               android:id="@+id/iv_login_show_pwd_hh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/icon_login_password_close"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_33"
            android:layout_marginRight="@dimen/space_33"
            android:layout_marginTop="17dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_forgit_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingBottom="@dimen/space_5"
                android:paddingLeft="@dimen/space_15"
                android:paddingRight="@dimen/space_2"
                android:paddingTop="@dimen/space_5"
                android:text="@string/str_login_forgit_title"
                android:textColor="@color/blue_code"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_login_dd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_15"
                android:background="@drawable/login_button_bg"
                android:gravity="center"
                android:text="@string/str_login_text"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_regedit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_15"
                android:background="@null"
                android:gravity="center"
                android:paddingBottom="@dimen/space_15"
                android:paddingTop="@dimen/space_15"
                android:text="@string/str_login_regedit_title"
                android:textColor="#999999"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>