<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginRight="@dimen/space_20"
        android:background="@drawable/notice_list_shape"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rel_my_weixin_friend"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_my_weixin_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_my_weixin_friend"
                android:textColor="@color/black_code"
                android:textSize="@dimen/sp_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/title_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_my_weixin_friend_circle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_my_weixin_friend_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_my_weixin_friend_circle"
                android:textColor="@color/black_code"
                android:textSize="@dimen/sp_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/title_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_my_application_forward"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_my_application_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_my_application_forward"
                android:textColor="@color/black_code"
                android:textSize="@dimen/sp_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/title_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_share_side_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_share_side_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="取消"
                android:textColor="@color/black_code"
                android:textSize="@dimen/sp_15" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>